--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,3 +77,68 @@ section{
 .imgmiddel img{
     width: 99vw;
 }
+footer{
+    background-color: black;
+
+}
+footer .footerp{
+    color: white;
+}
+footer .container{
+    display: flex;
+    justify-content: space-around;
+    width: 1342px;
+
+}
+.footerimg img{
+    margin: 20px;
+    width: 150px;
+}
+.footerp p{
+    margin: 20px;
+}
+
+.socialmedia{
+    text-align: center;
+}
+.socialmedia a{
+   font-size: 40px;
+    margin: 10px;
+
+}
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+}
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-google {
+    background: #dd4b39;
+    color: white;
+}
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+.fa-youtube {
+    background: #bb0000;
+    color: white;
+}
+
+.fa-instagram {
+    background: #125688;
+    color: white;
+}
