--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,7 +67,8 @@ section{
 }
 .apraats{
     display: flex;
-    height: 150px;
+    height: 180px;
+    justify-content: space-evenly;
 
 }
 .apraats img{
@@ -142,3 +143,38 @@ footer .container{
     background: #125688;
     color: white;
 }
+main .info {
+/display: none;/
+    width: 50%;
+    height: 45%;
+
+    z-index: 10;
+    left: 25%;
+    top: 12%;
+    background: rgb(231, 238, 231);
+    border: 2px solid #000;
+    padding: 10px 20px;
+}
+
+main .info h2 {
+    text-align: center;
+}
+
+main .info img {
+    width: 100%;
+}
+
+main .info .close {
+    background: rgb(69, 197, 59);
+    display: inline;
+    padding: 3px 15px;
+    margin-top: 10px;
+}
+
+main .info .close:hover {
+    cursor: pointer;
+}
+.info p{
+    margin: 0 0 10px 0;
+}
+
