--- a/public/css/main.css
+++ b/public/css/main.css
@@ -181,4 +181,40 @@ main .info .close:hover {
 .info p{
     margin: 0 0 10px 0;
 }
+section{
+    display: flex;
+}
+section img{
+    width: 80%;
+}
+section p{
+    text-align: center;
+    margin: 20px;
+    padding: 10px;
+}
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+
 
